// Copyright 2017 Ross Peoples
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pb;

import "google/api/annotations.proto";

service Mydis {
	// -- core functions
	// Keys returns a list of valid keys.
	rpc Keys(Null) returns (KeysList) {
		option (google.api.http) = {
			post: "/v1/keys"
			body: "*"
		};
	}
    // KeysWithPrefix returns a list of keys with the given prefix.
    rpc KeysWithPrefix(Key) returns (KeysList) {
		option (google.api.http) = {
			post: "/v1/keysWithPrefix"
			body: "*"
		};
	}
	// Has checks if the cache has the given key and that it is not expired.
	rpc Has(Key) returns (Bool) {
		option (google.api.http) = {
			post: "/v1/has"
			body: "*"
		};
	}
	// SetExpire sets the expiration on a key.
	rpc SetExpire(Expiration) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setExpire"
			body: "*"
		};
	}
    // Lock a key from being modified.
    rpc Lock(Key) returns (Null) {
		option (google.api.http) = {
			post: "/v1/lock"
			body: "*"
		};
	}
	// LockWithTimeout locks a key, waiting for the given number of seconds if already locked before returning an error.
	rpc LockWithTimeout(Expiration) returns (Null) {
		option (google.api.http) = {
			post: "/v1/lockWithTimeout"
			body: "*"
		};
	}
    // Unlock a key for modifications.
    rpc Unlock(Key) returns (Null) {
		option (google.api.http) = {
			post: "/v1/unlock"
			body: "*"
		};
	}
	// UnlockThenSet unlocks a key, then immediately sets its byte array value.
	rpc UnlockThenSet(ByteValue) returns (Null) {
		option (google.api.http) = {
			post: "/v1/unlockThenSet"
			body: "*"
		};
	}
	// UnlockThenSetList unlocks a key, then immediately sets its list value.
	rpc UnlockThenSetList(List) returns (Null) {
		option (google.api.http) = {
			post: "/v1/unlockThenSetList"
			body: "*"
		};
	}
	// Delete removes a key from the cache.
	rpc Delete(Key) returns (Null) {
		option (google.api.http) = {
			post: "/v1/delete"
			body: "*"
		};
	}
	// Clear the cache.
	rpc Clear(Null) returns (Null) {
		option (google.api.http) = {
			post: "/v1/clear"
			body: "*"
		};
	}

	// -- bytes functions
	// Get gets the value for the given key as a byte slice.
    rpc Get(Key) returns (ByteValue) {
		option (google.api.http) = {
			post: "/v1/get"
			body: "*"
		};
	}
	// GetMany gets a list of values from the cache.
	rpc GetMany(KeysList) returns (Hash) {
		option (google.api.http) = {
			post: "/v1/getMany"
			body: "*"
		};
	}
	// GetWithPrefix returns the keys with the given prefix.
	rpc GetWithPrefix(Key) returns (Hash) {
		option (google.api.http) = {
			post: "/v1/getWithPrefix"
			body: "*"
		};
	}
	// Set sets the byte value.
    rpc Set(ByteValue) returns (Null) {
		option (google.api.http) = {
			post: "/v1/set"
			body: "*"
		};
	}
	// SetNX sets a value only if the key doesn't exist, returns true if changed.
	rpc SetNX(ByteValue) returns (Bool) {
		option (google.api.http) = {
			post: "/v1/setNX"
			body: "*"
		};
	}
	// SetMany values, returning a map[key]errorText for any errors.
	rpc SetMany(Hash) returns (ErrorHash) {
		option (google.api.http) = {
			post: "/v1/setMany"
			body: "*"
		};
	}
	// Length returns the length of the value for the given key.
	rpc Length(Key) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/length"
			body: "*"
		};
	}

	// -- number functions
	// GetInt gets an integer value for the given key.
	rpc GetInt(Key) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/getInt"
			body: "*"
		};
	}
	// GetFloat gets a float value for the given key.
	rpc GetFloat(Key) returns (FloatValue) {
		option (google.api.http) = {
			post: "/v1/getFloat"
			body: "*"
		};
	}
	// SetInt sets an integer.
	rpc SetInt(IntValue) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setInt"
			body: "*"
		};
	}
	// SetFloat sets a float.
	rpc SetFloat(FloatValue) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setFloat"
			body: "*"
		};
	}
	// IncrementInt increment an integer stored at the given key by the given number and returns new value.
	rpc IncrementInt(IntValue) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/incrementInt"
			body: "*"
		};
	}
	// DecrementInt decrements an integer stored at the given key by the given number and returns new value.
	rpc DecrementInt(IntValue) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/decrementInt"
			body: "*"
		};
	}
	// IncrementFloat increment a float stored at the given key by the given number and returns new value.
	rpc IncrementFloat(FloatValue) returns (FloatValue) {
		option (google.api.http) = {
			post: "/v1/incrementFloat"
			body: "*"
		};
	}
	// DecrementFloat decrements a float stored at the given key by the given number and returns new value.
	rpc DecrementFloat(FloatValue) returns (FloatValue) {
		option (google.api.http) = {
			post: "/v1/decrementFloat"
			body: "*"
		};
	}

	// -- list functions
	// GetList gets a list from the cache.
	rpc GetList(Key) returns (List) {
		option (google.api.http) = {
			post: "/v1/getList"
			body: "*"
		};
	}
	// GetListItem gets a single item from a list by index, supports negative indexing.
	rpc GetListItem(ListItem) returns (ByteValue) {
		option (google.api.http) = {
			post: "/v1/getListItem"
			body: "*"
		};
	}
	// SetList sets a list in the cache.
	rpc SetList(List) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setList"
			body: "*"
		};
	}
	// SetListItem sets a single item in a list by index.
	rpc SetListItem(ListItem) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setListItem"
			body: "*"
		};
	}
	// ListLength returns the number of items in a list.
	rpc ListLength(Key) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/listLength"
			body: "*"
		};
	}
	// ListLimit sets the maximum length of a list, removing items from the top once limit is reached.
	rpc ListLimit(ListItem) returns (Null) {
		option (google.api.http) = {
			post: "/v1/listLimit"
			body: "*"
		};
	}
	// ListInsert inserts a new item at the given index in the list.
	rpc ListInsert(ListItem) returns (Null) {
		option (google.api.http) = {
			post: "/v1/listInsert"
			body: "*"
		};
	}
	// ListAppend inserts a new item at the end of the list.
	rpc ListAppend(ListItem) returns (Null) {
		option (google.api.http) = {
			post: "/v1/listAppend"
			body: "*"
		};
	}
	// ListPopLeft returns and removes the first item in a list.
	rpc ListPopLeft(Key) returns (ByteValue) {
		option (google.api.http) = {
			post: "/v1/listPopLeft"
			body: "*"
		};
	}
	// ListPopRight returns and removes the last item in a list.
	rpc ListPopRight(Key) returns (ByteValue) {
		option (google.api.http) = {
			post: "/v1/listPopRight"
			body: "*"
		};
	}
	// ListHas determines if a list contains an item, returns index or -1 if not found.
	rpc ListHas(ListItem) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/listHas"
			body: "*"
		};
	}
	// ListDelete removes an item from a list by index.
	rpc ListDelete(ListItem) returns (Null) {
		option (google.api.http) = {
			post: "/v1/listDelete"
			body: "*"
		};
	}
	// ListDeleteItem removes the first occurrence of value from a list, returns index of removed item or -1 for not found.
	rpc ListDeleteItem(ListItem) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/listDeleteItem"
			body: "*"
		};
	}

	// -- hash functions
	// GetHash gets a hash from the cache.
	rpc GetHash(Key) returns (Hash) {
		option (google.api.http) = {
			post: "/v1/getHash"
			body: "*"
		};
	}
	// GetHashField gets a single value in a hash.
	rpc GetHashField(HashField) returns (ByteValue) {
		option (google.api.http) = {
			post: "/v1/getHasField"
			body: "*"
		};
	}
	// GetHashFields gets multiple hash values.
	rpc GetHashFields(HashFieldSet) returns (Hash) {
		option (google.api.http) = {
			post: "/v1/getHashFields"
			body: "*"
		};
	}
	// HashHas determines if a hash has a given field.
	rpc HashHas(HashField) returns (Bool) {
		option (google.api.http) = {
			post: "/v1/hashHas"
			body: "*"
		};
	}
	// HashLength returns the number of fields in a hash.
	rpc HashLength(Key) returns (IntValue) {
		option (google.api.http) = {
			post: "/v1/hashLength"
			body: "*"
		};
	}
	// HashFields gets a list of the fields in a hash.
	rpc HashFields(Key) returns (KeysList) {
		option (google.api.http) = {
			post: "/v1/hashFields"
			body: "*"
		};
	}
	// HashValues gets a list of the values in a hash.
	rpc HashValues(Key) returns (List) {
		option (google.api.http) = {
			post: "/v1/hashValues"
			body: "*"
		};
	}
	// SetHash sets the value of a hash.
	rpc SetHash(Hash) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setHash"
			body: "*"
		};
	}
	// SetHashField sets a single value in a hash.
	rpc SetHashField(HashField) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setHashField"
			body: "*"
		};
	}
	// SetHashFields sets multiple values in a hash.
	rpc SetHashFields(Hash) returns (Null) {
		option (google.api.http) = {
			post: "/v1/setHashFields"
			body: "*"
		};
	}
	// DelHashField deletes a field from a hash.
	rpc DelHashField(HashField) returns (Null) {
		option (google.api.http) = {
			post: "/v1/delHashField"
			body: "*"
		};
	}

	// -- push functions
	// Watch for changes to a key.
	rpc Watch(stream WatchRequest) returns (stream Event) {
		option (google.api.http) = {
			post: "/v1/watch"
			body: "*"
		};
	}

	// -- auth passthrough functions
	// AuthEnable enables authentication.
	rpc AuthEnable(AuthEnableRequest) returns (AuthEnableResponse) {}
	// AuthDisable disables authentication.
	rpc AuthDisable(AuthDisableRequest) returns (AuthDisableResponse) {}
	// Authenticate processes an authenticate request.
	rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
	// UserAdd adds a new user.
	rpc UserAdd(AuthUserAddRequest) returns (AuthUserAddResponse) {}
	// UserGet gets detailed user information.
	rpc UserGet(AuthUserGetRequest) returns (AuthUserGetResponse) {}
	// UserList gets a list of all users.
	rpc UserList(AuthUserListRequest) returns (AuthUserListResponse) {}
	// UserDelete deletes a specified user.
	rpc UserDelete(AuthUserDeleteRequest) returns (AuthUserDeleteResponse) {}
	// UserChangePassword changes the password of a specified user.
	rpc UserChangePassword(AuthUserChangePasswordRequest) returns (AuthUserChangePasswordResponse) {}
	// UserGrantRole grants a role to a specified user.
	rpc UserGrantRole(AuthUserGrantRoleRequest) returns (AuthUserGrantRoleResponse) {}
	// UserRevokeRole revokes a role of specified user.
	rpc UserRevokeRole(AuthUserRevokeRoleRequest) returns (AuthUserRevokeRoleResponse) {}
	// RoleAdd adds a new role.
	rpc RoleAdd(AuthRoleAddRequest) returns (AuthRoleAddResponse) {}
	// RoleGet gets detailed role information.
	rpc RoleGet(AuthRoleGetRequest) returns (AuthRoleGetResponse) {}
	// RoleList gets lists of all roles.
	rpc RoleList(AuthRoleListRequest) returns (AuthRoleListResponse) {}
	// RoleDelete deletes a specified role.
	rpc RoleDelete(AuthRoleDeleteRequest) returns (AuthRoleDeleteResponse) {}
	// RoleGrantPermission grants a permission of a specified key or range to a specified role.
	rpc RoleGrantPermission(AuthRoleGrantPermissionRequest) returns (AuthRoleGrantPermissionResponse) {}
	// RoleRevokePermission revokes a key or range permission of a specified role.
	rpc RoleRevokePermission(AuthRoleRevokePermissionRequest) returns (AuthRoleRevokePermissionResponse) {}
}

// Null object.
message Null {}

// Key object.
message Key {
	string key = 1;
    int64 limit = 3;
    int64 revision = 4;
    int64 minModRevision = 10;
    int64 maxModRevision = 11;
    int64 minCreateRevision = 12;
    int64 maxCreateRevision = 13;
	bool block = 14;
	int64 blockTimeout = 15;
}

// Bool object.
message Bool {
	bool value = 1;
}

// Expiration object.
message Expiration {
	string key = 1;
	sint64 exp = 2;
}

// ByteValue object.
message ByteValue {
	string key = 1;
	bytes value = 2;
}

// IntValue object.
message IntValue {
	string key = 1;
	sint64 value = 2;
}

// FloatValue object.
message FloatValue {
	string key = 1;
	double value = 2;
}

// KeysList object.
message KeysList {
	repeated string keys = 1;
}

// List object.
message List {
	string key = 1;
	repeated bytes value = 2;
	int64 limit = 3;
}

// ListItem object.
message ListItem {
	string key = 1;
	int64 index = 2;
	bytes value = 3;
}

// ErrorHash object.
message ErrorHash {
	map<string, string> errors = 1;
}

// StringHash object.
message StringHash {
	string key = 1;
	map<string, string> value = 2;
}

// Hash object.
message Hash {
	string key = 1;
	map<string, bytes> value = 2;
}

// HashField object.
message HashField {
	string key = 1;
	string field = 2;
	bytes value = 3;
}

// HashFieldSet object.
message HashFieldSet {
	string key = 1;
	repeated string field = 2;
	repeated bytes value = 3;
}

// WatchRequest object.
message WatchRequest {
	string key = 1;
	bool prefix = 2;
	int64 rev = 3;
	int64 id = 4;
	bool cancel = 5;
}

// Event object.
message Event {
	enum EventType {
		PUT = 0;
		DELETE = 1;
	}

	EventType type = 1;
	ByteValue current = 3;
	ByteValue previous = 4;
}

// -- Etcd auth passthrough messages
// Permission is a single entity
message Permission {
	enum Type {
		READ = 0;
		WRITE = 1;
		READWRITE = 2;
	}
	Type permType = 1;

	bytes key = 2;
	bytes range_end = 3;
}

message ResponseHeader {
  // cluster_id is the ID of the cluster which sent the response.
  uint64 cluster_id = 1;
  // member_id is the ID of the member which sent the response.
  uint64 member_id = 2;
  // revision is the key-value store revision when the request was applied.
  int64 revision = 3;
  // raft_term is the raft term when the request was applied.
  uint64 raft_term = 4;
}

message AuthEnableRequest {
}

message AuthDisableRequest {
}

message AuthenticateRequest {
  string name = 1;
  string password = 2;
}

message AuthUserAddRequest {
  string name = 1;
  string password = 2;
}

message AuthUserGetRequest {
  string name = 1;
}

message AuthUserDeleteRequest {
  // name is the name of the user to delete.
  string name = 1;
}

message AuthUserChangePasswordRequest {
  // name is the name of the user whose password is being changed.
  string name = 1;
  // password is the new password for the user.
  string password = 2;
}

message AuthUserGrantRoleRequest {
  // user is the name of the user which should be granted a given role.
  string user = 1;
  // role is the name of the role to grant to the user.
  string role = 2;
}

message AuthUserRevokeRoleRequest {
  string name = 1;
  string role = 2;
}

message AuthRoleAddRequest {
  // name is the name of the role to add to the authentication system.
  string name = 1;
}

message AuthRoleGetRequest {
  string role = 1;
}

message AuthUserListRequest {
}

message AuthRoleListRequest {
}

message AuthRoleDeleteRequest {
  string role = 1;
}

message AuthRoleGrantPermissionRequest {
  // name is the name of the role which will be granted the permission.
  string name = 1;
  // perm is the permission to grant to the role.
  Permission perm = 2;
}

message AuthRoleRevokePermissionRequest {
  string role = 1;
  string key = 2;
  string range_end = 3;
}

message AuthEnableResponse {
  ResponseHeader header = 1;
}

message AuthDisableResponse {
  ResponseHeader header = 1;
}

message AuthenticateResponse {
  ResponseHeader header = 1;
  // token is an authorized token that can be used in succeeding RPCs
  string token = 2;
}

message AuthUserAddResponse {
  ResponseHeader header = 1;
}

message AuthUserGetResponse {
  ResponseHeader header = 1;

  repeated string roles = 2;
}

message AuthUserDeleteResponse {
  ResponseHeader header = 1;
}

message AuthUserChangePasswordResponse {
  ResponseHeader header = 1;
}

message AuthUserGrantRoleResponse {
  ResponseHeader header = 1;
}

message AuthUserRevokeRoleResponse {
  ResponseHeader header = 1;
}

message AuthRoleAddResponse {
  ResponseHeader header = 1;
}

message AuthRoleGetResponse {
  ResponseHeader header = 1;

  repeated Permission perm = 2;
}

message AuthRoleListResponse {
  ResponseHeader header = 1;

  repeated string roles = 2;
}

message AuthUserListResponse {
  ResponseHeader header = 1;

  repeated string users = 2;
}

message AuthRoleDeleteResponse {
  ResponseHeader header = 1;
}

message AuthRoleGrantPermissionResponse {
  ResponseHeader header = 1;
}

message AuthRoleRevokePermissionResponse {
  ResponseHeader header = 1;
}